test/SemanticAnalysis/Assert/StaticAssertSatisfies.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class A() {
	void method() { }
}

interface B {
	void method();
}

// CHECK-NOT: .loci:13:15: error: static assert predicate evaluates to false
static assert A : B;

// CHECK: .loci:16:15: error: static assert predicate evaluates to false
static assert B : A;

// CHECK: 1 error generated.
